# D-Strategies

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  commit_commodities.sh  conftest.py  debug_rp.py  docker-compose.yml  kill_pytest.sh  killit.py  killit2.py  killpytest.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.github/: ci.yml
backend/: .env  .env.example  package.json  requirements.txt  uniswap_adapter.py
backend/accounting/: ledger.py
backend/adapters/: latency_adapter.py
backend/agents/: analyst_agent.py
backend/ai/: deepfake_guard.py  drift_detection.py  ensemble_switcher.py  explainable_trades.py  factor_discovery_agent.py  insight_agent.py  jarvis.py  pricing_predictor.py  query_copilot.py  risk_explainer.py  rl_execution_agent.py  sentiment_ai.py  voice_interface.py
backend/ai_brain/: auto_research.py  regime_oracle.py  strategy_generator.py
backend/alerts/: engine.py
backend/allocator/: capital_router.py  crisis_mode.py  meta_allocator.py  risk_budget.py
backend/analytics/: __init__.py  alpha_dna.py  arbmap.py  attribution.py  capacity.py  corr_matrix.py  correlations.py  expected_shortfall.py  experiments.py  feature_store.py  hedge_recipes.py  hedger.py  index_builder.py  intraday_var.py  lineage.py  optimizer.py  pnl_attribution.py  regime_map.py  report_generator.py  risk_metrics.py  scenario_generator.py  sentiment_ai.py  tca.py  tca_extended.py  trade_history.py
backend/api/: __init__.py  adamodar.py  alerts.py  analytics_router.py  backtest_router.py  broker_interface.py  data_api.py  live_engine_router.py  main.py  orders.py  risk_router.py  strategy_lab_router.py  ws_candles.py  ws_greeks.py  ws_live.py  ws_orderbook.py
backend/apps/: flags.ts  main.ts  routes.ts
backend/arbitrage/: venue_spreads.py
backend/audit/: entitlements.py  merkle_ledger.py  zk_proofs.py
backend/backtester/: __init__.py  ablation.ts  anti_overfit_engine.py  backtest_engine.py  backtester.py  benchmark.ts  cli.mjs  cli.ts  data_engine.py  data_feeds.py  digital_twin.py  engine.ts  events.py  execution_engine.py  factor_model.py  intrabar_simulator.py  metrics.py  metrics.ts  nse_loader.py  optimization_engine.py  order_types.py  parallel_runner.py  portfolio_engine.py  regime.ts  replay_with_params.py  (+6 more)
config/: latency.yaml
deploy/: docker-compose.override.yml
docker/: base.Dockerfile  worker.Dockerfile
docs/: configs.md  definition-of-done.md  demo_script.md  dr_runbook.md  features.md  macro_llm_monitor (1).md  macro_llm_monitor.md  model_cards_guide.md  playbooks.md  readme.md  rl_execution_agent.md  rl_executionagent.md  user-guide.md
frontend/: app.tsx  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build.sh  dev.sh  healthcheck.sh  start-integrations.sh
types/: shims.d.ts
(+1862 files in other folders)
