[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-platform"
version = "0.1.0"
description = "Production-ready hedge fund platform backbone (workers, monitoring, risk, sentiment)"
authors = [
  { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Core
  "redis>=5.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyyaml>=6.0.1",
  "pytz>=2024.1",

  # Web framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "websockets>=12.0",
  "aiohttp>=3.9.0",

  # Database
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",

  # Risk / research
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "networkx>=3.2.0",

  # Scheduling
  "apscheduler>=3.10.0",

  # Broker / data connectors
  "kiteconnect>=5.0.1",

  # AI / embeddings
  "openai>=1.35.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",

  # Monitoring
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "prometheus-client>=0.20.0",

  # NLP (for sentiment worker)
  "nltk>=3.9",
  "spacy>=3.7.0",

  # Data / market feeds
  "yfinance>=0.2",
  "requests>=2.31",
  "httpx>=0.27.0",

  # Quantitative finance
  "statsmodels>=0.14",
  "arch>=5.6",
  "numba>=0.58",

  # Utilities
  "jsonlines>=4.0",
  "loguru>=0.7",
  "tqdm>=4.66",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "black>=24.0.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
# The platform is written in a deliberately compact house style (one-line
# guards, semicolon-separated statements, grouped imports, long descriptive
# lines). These purely-cosmetic rules are disabled to match it; all
# correctness rules (the F-series, undefined/unbound names, etc.) stay on.
ignore = [
  "E501",  # line too long
  "E701",  # multiple statements on one line (colon)
  "E702",  # multiple statements on one line (semicolon)
  "E703",  # statement ends with a semicolon
  "E401",  # multiple imports on one line
  "E402",  # module-level import not at top (conditional/lazy imports)
  "E731",  # lambda assignment
  "E741",  # ambiguous variable name (l/O/I)
  "E722",  # bare except (used for soft-fail graceful degradation)
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export symbols; keep "unused" imports.
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true